# bioxen-server-pycwt-mod

./: BACKEND_IMPLEMENTATION_SUMMARY.md  CIRCADIAN-DAY-NIGHT-FILES.md  ELM11-STATUS.md  LICENSE  NEXT-STEPS.txt  PHASE1-3-COMPLETE.md  PHASE1-COMPLETE.md  PHASE2-WAVELET-ENDPOINTS-COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE2_TESTING.md  PHASE3-COMPLETE.md  PROJECT-ORGANIZATION.md  PROJECT-STATUS.txt  QUICK-START.txt  README.md  SETUP.md  SMP-SETUP.md  TANG-NANO-9K-TESTING.md  TEST-STATUS.md  activate-dev.sh  api-specification-document.md  client-test-output.txt  diagnose-server.py  fix-elm11-permissions.sh  install-elm11-support.sh  integration-plan.md  kakeya-prompt.md  laptop-test-instructions.md  make-this-a-server-claude.md  make-this-a-server.md  mkdocs.yml  pyproject.toml  quick-setup.sh  remaining-fix.md  run_phase2_tests.py  setup-dev.sh  start-server.sh  t.txt  tang-nano-9k-prompt.md  (+9 more)
client-tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test-results.md  test_backends.py  test_benchmark.py  test_hardware.py  test_health.py  test_integration.py  test_wavelet.py
docs/: index.md
kaiabc-server/: KAIABC-VS-WISHFUL.md  Kai-ABC-api-specification-planning-software.md  README.md  start-KaiABC-server.sh
md_archive/: BRANCH_MIGRATION.md  ELM11-prompt.md  Parallel-Monte-Carlo-prompt.md  REMOTE-TESTING.md  integration-plan.md  tang-nano-9k-prompt.md
research/: FFT-based-performance-bottleneck-massive-datasets-prompt.FPGA.md  FFT-based-performance-bottleneck-massive-datasets-prompt.md  README.md  SIMD-analysis.md  pwt-report.md  (+2 more)
(+75 files in other folders)
