[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "pycwt-mod"
dynamic = ["version"]
dependencies = [
    "numpy>=1.24, <2",
    "scipy>=1.10, <2",
    "matplotlib>=3.7, <4",
    "tqdm>=4.65, <5"
]
description = "Modular fork of continuous wavelet transform module for Python."
license = {file="LICENSE"}
authors = [
    {name="Sebastian Krieger", email="sebastian@nublia.com"},
    {name="Nabil Freij"},
    {name="and contributors"}
]
maintainers = [
    {name="Sebastian Krieger", email="sebastian@nublia.com"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["wavelet", "spectral analysis", "signal processing", "data science", "timeseries", "time series"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
    'Intended Audience :: Science/Research'
]


[project.urls]
repository = "https://github.com/aptitudetechnology/pycwt-mod"
documentation = "https://pycwt-mod.readthedocs.io/"


[tool.setuptools_scm]
write_to = "src/pycwt_mod/_version_.py"


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]